Wed Nov  8 14:10:20 2000  Carlos O'Ryan  <coryan@uci.edu>

        * examples/IPC_SAP/FIFO_SAP/FIFO-Msg-server.cpp:
        * examples/IPC_SAP/SPIPE_SAP/client.cpp:
        * examples/IPC_SAP/SPIPE_SAP/consumer_msg.cpp:
        * examples/IPC_SAP/SPIPE_SAP/consumer_read.cpp:
        * examples/IPC_SAP/SPIPE_SAP/server.cpp:
        * examples/RMCast/Send_File/Sender.cpp:
        * examples/Reactor/Misc/test_event_handler_t.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.h:
          We must explicitly #include "ace/Log_Msg.h", unfortunately the
          errors were only detected on platforms that do not define
          ACE_TEMPLATES_REQUIRE_SOURCE.

        * include/makeinclude/rules.local.GNU:
          More fine tuning, the Templates.DB directory must be created by
          the Makefile because SunCC 4.2 generates a warning if it is not
          present.

Wed Nov  8 14:40:25 2000  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-all.h

          Fix a build problem on HP-UX 11.00 with aCC A.03.25.  The macro
          used to determine the use of the std namespace changed from
          RWSTD_NO_NAMESPACE to _NAMESPACE_STD.  NOTE: I did preserve the
          check for RWSTD_NO_NAMESPACE with aCC versions less than A.03.25.

Wed Nov  8 10:27:00 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/generate_doxygen.pl:
          Automates the invocation of doxygen. It modifies the doxygen
          templates in $ACE_ROOT/etc and creates the right directory
          hierarchy to receive the files.

        * ace/config-doxygen.h:
          Configuration file used to generate the doxygen files.
          Notice that this is not a valid configuration for any platform,
          for example, it enables both the Win32 and the POSIX AIO calls.

        * etc/ace.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/tao.doxygen:
        * etc/tao_dynamicany.doxygen: